# china-us-stock-tax

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: html_report_plan.md  pdf_parser_test_plan.md  statement_parser_refactoring.md  tax_policy.md
src/: cli.py  config.py
src/calculator/: __init__.py  contract.py  exchange_rate.py  fifo.py  income_classifier.py  tax_engine.py
src/database/: __init__.py  check_option_gaps.py  connection.py  import_statements.py  rebuild.py  repositories.py  schema.py
src/database/importers/: __init__.py  base.py  boci.py  futu.py  longbridge.py  shared_utils.py
src/harness/: __init__.py  db_validators.py  legal_basis.md  multi_account_verify.py  overpayment_detect.py  pre_calc.py  quality.py  reconciliation.py  run.py  tax_rules.md  tax_verify.py  validators.py
src/models/: __init__.py  tax_lot.py  tax_result.py  transaction.py
src/parsers/: base.py  futu_pdf_parser.py  longbridge_pdf_parser.py
src/report/: __init__.py  csv_report.py  detailed_html_report.py  per_broker_tax_report.py
tests/: test_exchange_rate.py  test_fifo.py  test_futu_e2e.py  test_harness.py  test_multi_account.py  test_overpayment.py  test_pdf_parser_special.py  test_pre_calc.py  test_tax_engine.py
